--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     def springframeworkBoot = "3.0.1"
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'com.google.code.gson:gson'
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.4'
@@ -63,6 +63,9 @@ dependencies {
     implementation 'org.opensearch.client:spring-data-opensearch-starter:1.2.0'
     //for openSearchTest
     implementation 'org.opensearch.client:spring-data-opensearch-test-autoconfigure:1.2.0'
+
+    // serialize
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.0'
 
 }
 
